# prompt-sandbox

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
_dev/: README.md  api_reference.md  architecture.md  implementation_notes.md  technical_challenges.md
configs/prompts/: qa_assistant.yaml
examples/: cli_example.yaml  complete_example.py  example_output.json  quickstart.py
notebooks/: 01_few_shot_learning_optimization.ipynb  01_quickstart.ipynb  02_chain_of_thought_reasoning.ipynb  02_full_experiment.ipynb  03_role_and_tone_engineering.ipynb  03_visualization.ipynb
src/: __init__.py
src/prompt_sandbox/: __init__.py
src/prompt_sandbox/cli/: __init__.py  main.py
src/prompt_sandbox/config/: __init__.py  loader.py  schema.py
src/prompt_sandbox/evaluators/: __init__.py  base.py  bertscore.py  bleu.py  rouge.py
src/prompt_sandbox/experiments/: __init__.py  async_runner.py  comparator.py  runner.py  storage.py
src/prompt_sandbox/models/: __init__.py  base.py  huggingface.py  ollama.py
src/prompt_sandbox/prompts/: __init__.py
src/prompt_sandbox/utils/: __init__.py  retry.py
src/prompt_sandbox/visualization/: __init__.py  plots.py
src/prompts/: template.py
tests/: __init__.py  test_evaluators.py  test_integration.py  test_prompts.py
